<resources>
    <string name="app_name">HiBeauty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">956616711391-9e0khru3t57olff8nabqstd2c39eplqh.apps.googleusercontent.com</string>
    <string name="profile">Your Profile</string>
    <string name="probability_format">Probability: %.2f%%</string>
    <string name="privacy_policy_content">
        <![CDATA[
        <h1>Privacy Policy</h1>

        <p>Last updated: May 28, 2024</p>

        <h2>1. Introduction</h2>
        <p>Welcome to Hi Beauty. Your privacy is very important to us. This privacy policy explains how we collect, use, and protect your personal information when you use our application.</p>

        <h2>2. Information We Collect</h2>
        <p>We collect various types of information to provide and improve our services to you, including:</p>
        <ul>
            <li><b>Personal Information:</b> Name, email address, and other information you provide voluntarily.</li>
            <li><b>Usage Information:</b> Data on how you interact with our application, including IP address, device type, operating system, and usage activity.</li>
            <li><b>Access Information:</b> Camera data, gallery, and precise geographic location if you grant permission through your device settings.</li>
        </ul>

        <h2>3. Use of Information</h2>
        <p>The information we collect is used for various purposes, including:</p>
        <ul>
            <li>Providing and maintaining the application services.</li>
            <li>Improving and personalizing the user experience.</li>
            <li>Managing your account and providing customer support.</li>
            <li>Sending updates, promotions, and other relevant information.</li>
            <li>Analyzing application usage to enhance our services.</li>
        </ul>

        <h2>4. Sharing Information</h2>
        <p>We will not share your personal information with third parties except in the following circumstances:</p>
        <ul>
            <li>With your consent.</li>
            <li>To comply with legal obligations or protect our rights and interests.</li>
            <li>With third-party service providers who assist us in operating the application, provided they maintain the confidentiality of your information.</li>
            <li>In connection with mergers, acquisitions, or sales of assets, provided that the third parties agree to adhere to this privacy policy.</li>
        </ul>

        <h2>5. Information Security</h2>
        <p>We take reasonable security measures to protect your information from unauthorized access, use, or disclosure. However, no method of data transmission over the internet or electronic storage is 100% secure, so we cannot guarantee absolute security.</p>

        <h2>6. User Rights</h2>
        <p>You have the right to:</p>
        <ul>
            <li>Access, update, or delete your personal information that we hold.</li>
            <li>Withdraw consent you have previously given regarding the use of your personal information.</li>
            <li>File a complaint with the relevant data protection authority if you believe your privacy rights have been violated.</li>
        </ul>

        <h2>7. Changes to the Privacy Policy</h2>
        <p>We may update this privacy policy from time to time. Any changes will be notified through the application or other appropriate means before they take effect. You are encouraged to review this privacy policy periodically.</p>

        <h2>8. Contact Us</h2>
        <p>If you have any questions or concerns about this privacy policy, please feel free to contact us at:</p>
        <p>Email: <a href="mailto:redy.wijaya24@gmail.com">redy.wijaya24@gmail.com</a></p>
        <p>Email: <a href="mailto:farhannn58@gmail.com">farhannn58@gmail.com</a></p>
        ]]>
    </string>
    <string name="close">Close</string>
    <string name="open_browser">Open in Browser</string>
    <string name="sample_image" translatable="false">Sample Image</string>
    <string name="sample_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at ipsum vel libero euismod tincidunt sit amet quis turpis. Donec ut lorem tellus. Ut eu leo ipsum. Nullam luctus, magna et pharetra suscipit, mi ligula condimentum velit, in vehicula velit metus non mi.</string>
    <string name="sample_desc_text" translatable="false">This is a short description of the content. It provides a summary or teaser for the full content.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logo">Logo</string>
    <string name="login_desc_text">Sign in now to access your experience in this app.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">OR</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_btn_text">SIGN IN</string>
    <string name="beauty_news_headline">Beauty News</string>
    <string name="search_article_hint">Search Article</string>
    <string name="center_button">Center button</string>
    <string name="image_article">Imgae Article</string>
    <string name="team_name" translatable="false">Created by C241-PS430</string>
    <string name="splash_app_name" translatable="false">HiBeauty!</string>
    <string name="back">Back</string>
    <string name="image_preview">Image Preview</string>
    <string name="analyze">Analyze</string>
    <string name="required_storage">Storage permission required!</string>
    <string name="required_camera">Camera permission is required!</string>
    <string name="scan_result">Scan Result</string>
    <string name="change_language_title">Change Language</string>
    <string name="greetings">Hello</string>
    <string name="change_language_message">Do you want to change your language to</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="language">Language</string>
    <string name="app_feature_text">Scan, analyze and find personalize product.</string>
    <string name="slide1_title">Wash Your Face Gently</string>
    <string name="slide1_desc">Use a facial cleanser that suits your skin type and avoid scrubbing too hard.</string>
    <string name="slide2_title">Use Sunscreen</string>
    <string name="slide2_desc">Always use sunscreen with an SPF of at least 30 every day to protect your skin from UV rays.</string>
    <string name="slide3_title">Use Moisturizer</string>
    <string name="slide3_desc">Use moisturizer every day to keep your skin moist, choose one that suits your skin type.</string>
    <string name="skincare_products">Skincare Products</string>
    <string name="tv_sub_2">The perfect product for your skin.</string>
    <string name="btn_find_product">Find Product</string>
    <string name="scan_now_txt">Scan your skin now!</string>
    <string name="btn_analyze">Analyze ></string>
    <string name="menu_home">Home</string>
    <string name="menu_product">Product</string>
    <string name="menu_news">News</string>
    <string name="menu_profile">Profile</string>
    <string name="search_product_hint">Search Product</string>
    <string name="product_detail_title">Product Detail</string>
    <string name="go_to_shop_btn">Go to Shop</string>
    <string name="description_label">Description:</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="text_message_1">Make sure the lighting around you is good</string>
    <string name="text_message_2">Adjust the face to the camera frame</string>
    <string name="text_message_3">Use a neutral facial expression</string>
    <string name="get_rec_btn">Get Recommendations</string>
    <string name="description_result_label">Description</string>
    <string name="text_desc_example" translatable="false">Ini adalah konten dari kotak kedua. Anda dapat menambahkan informasi lain di sini.</string>
    <string name="product_rec_title">Product Recommendations</string>
    <string name="profile_information_menu">Information</string>
    <string name="language_menu">Language</string>
    <string name="privacy_policy_menu">Privacy policy</string>
    <string name="user_information_title">User Information</string>
    <string name="name_label">"Name: "</string>
    <string name="age_lable">"Age: "</string>
    <string name="gender_lable">"Gender: "</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="logout_menu">Logout</string>
    <string name="warning_logout">Are you sure you want to logout?</string>
    <string name="choose_yes">Yes</string>
    <string name="choose_no">No</string>
    <string name="apply_btn">Apply</string>
    <string name="gender_question">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="finish_btn">Finish</string>
    <string name="age_question">What is your age?</string>
    <string name="enter_age_hint">Enter your age</string>
    <string name="next_btn">Next</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_desc">Sign up now for free and start explore HiBeauty.</string>
    <string name="password_confirmation_hint">Password Confirmation</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="account_hint">Already have an account?</string>
    <string name="start_button">Get Started</string>
    <string name="acne_description">Your face is predominantly acne-prone. Recommended treatments include using products with active ingredients like salicylic acid or benzoyl peroxide.</string>
    <string name="oily_description">Your face is predominantly oily. It is recommended to use oil-controlling products such as toner with astringent active ingredients.</string>
    <string name="eye_bags_description">You have noticeable eye bags. It is recommended to use eye cream containing caffeine to reduce swelling.</string>
    <string name="unknown_description">Unknown result. Please consult with a skin specialist for further explanation.</string>
    <string name="onboarding_title_1">Welcome</string>
    <string name="onboarding_desc_1">Discover the right skincare products for your skin. We help you take care of your face with personalized recommendations.</string>
    <string name="onboarding_title_2">Scan Your Face</string>
    <string name="onboarding_desc_2">Use the scanning feature to analyze your skin condition. This is the first step to the right skincare recommendations.</string>
    <string name="onboarding_title_3">Skincare Recommendations</string>
    <string name="onboarding_desc_3">Based on the scan results, we will recommend the most suitable skincare products for you. Ready to start your skincare journey?</string>
    <string name="language_changed_alert">Language changed successfully!</string>
    <string name="language_message_1">Language is changed to</string>
    <string name="language_message_2">, please restart the app to apply new settings</string>
    <string name="ok">Ok</string>
    <string name="login_successful">Login successful</string>
    <string name="token_empty_or_null">Token is empty or null</string>
    <string name="login_failed">Login failed</string>
    <string name="error_token_not_found">Error: Token not found</string>
    <string name="failed_to_fetch_user_profile">Failed to fetch user profile</string>
    <string name="error_fetching_user_profile">Error fetching user profile</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="unknown_error">Unknown error</string>
    <string name="registration_failed">Registration failed</string>
</resources>